--- a/src/css/site.css
+++ b/src/css/site.css
@@ -24,10 +24,10 @@ Mouse
 #menu-btn > .line2 { width: 80%; top: 50%; transform: translateY(-50%); }
 #menu-btn > .line3 { top: 100%; transform: translateY(-100%); }
 
-#menu-btn > .check { position: absolute; z-index: 100; width: 100%; height: 100%; opacity: 0; cursor: pointer; }
-#menu-btn > .check:checked ~ .line1 { top: 50%; transform: translate(0, -50%) rotate(45deg); }
-#menu-btn > .check:checked ~ .line2 { width: 0; opacity: 0; }
-#menu-btn > .check:checked ~ .line3 { top: 50%; transform: translate(0, -50%) rotate(-45deg); }
+#menu-btn:hover { cursor: pointer; }
+#menu-btn.check .line1 { top: 50%; transform: translate(0, -50%) rotate(45deg); }
+#menu-btn.check .line2 { width: 0; opacity: 0; }
+#menu-btn.check .line3 { top: 50%; transform: translate(0, -50%) rotate(-45deg); }
 
 .nav {
     position: fixed;
