--- a/src/css/site.css
+++ b/src/css/site.css
@@ -18,16 +18,16 @@ Mouse
 #nav-wrapper > #contact-btn img { width: 60px; animation: jitter 800ms infinite;}
 #nav-wrapper > #contact-btn :hover { cursor: pointer; }
 
-#menu-btn { width: 25px; height: 20px; position: absolute; top: 30px; right: 30px; z-index: 100; }
-#menu-btn > .line { position: absolute; left: 0; width: 100%; height: 16%; transform-origin: center; background-color: #725B4C; border-radius: 4px; transition: 0.5s all linear; }
-#menu-btn > .line1 { top: 0; }
-#menu-btn > .line2 { width: 80%; top: 50%; transform: translateY(-50%); }
-#menu-btn > .line3 { top: 100%; transform: translateY(-100%); }
+#nav-wrapper > #menu-btn { width: 25px; height: 20px; position: absolute; top: 30px; right: 30px; z-index: 100; }
+#nav-wrapper > #menu-btn > .line { position: absolute; left: 0; width: 100%; height: 16%; transform-origin: center; background-color: #725B4C; border-radius: 4px; transition: 0.5s all linear; }
+#nav-wrapper > #menu-btn > .line1 { top: 0; }
+#nav-wrapper > #menu-btn > .line2 { width: 80%; top: 50%; transform: translateY(-50%); }
+#nav-wrapper > #menu-btn > .line3 { top: 100%; transform: translateY(-100%); }
 
-#menu-btn:hover { cursor: pointer; }
-#menu-btn.check .line1 { top: 50%; transform: translate(0, -50%) rotate(45deg); }
-#menu-btn.check .line2 { width: 0; opacity: 0; }
-#menu-btn.check .line3 { top: 50%; transform: translate(0, -50%) rotate(-45deg); }
+#nav-wrapper > #menu-btn:hover { cursor: pointer; }
+#nav-wrapper > #menu-btn.check .line1 { top: 50%; transform: translate(0, -50%) rotate(45deg); }
+#nav-wrapper > #menu-btn.check .line2 { width: 0; opacity: 0; }
+#nav-wrapper > #menu-btn.check .line3 { top: 50%; transform: translate(0, -50%) rotate(-45deg); }
 
 .nav {
     position: fixed;
@@ -120,7 +120,7 @@ ul.nav__list.main {
     opacity: .5;
 }
 
-@media (min-width: 56.25em) {
+@media (min-width: 960px) {
     .project-visual img {
         display: initial;
         transform: scale(1.15);
@@ -140,24 +140,13 @@ ul.nav__list.main {
     }
 }
 
-@media (min-width: 48em) {
+@media (min-width: 512px) {
     .nav {
         width: min(400px,100%);
     }
-    
-    
 }
 
-@media (max-width: 512px) {
-    #nav-wrapper > a.logo {
-        top: 20px;
-        left: 20px;
-    }
-
-    #menu-btn {
-        top: 25px;
-        right: 25px;
-    }
+@media (max-width: 960px) {
     .nav.hover-within {
         background-color: var(--beige-color);
     }
@@ -165,6 +154,16 @@ ul.nav__list.main {
         color: var(--brown-color);
     }
     .nav__item:hover .nav__item__title, .nav__item:hover .nav__item__category {
-        color: var(--beige-color)!important;
+        color: var(--beige-color);
     }
+    .nav__list.main .nav__list__item:hover {
+        color: var(--brown-color) !important;
+    }
+}
+
+@media (max-width: 512px) {
+    #nav-wrapper > a.logo { top: 20px; left: 20px; }
+    #nav-wrapper > #menu-btn { top: 25px; right: 25px; }
+    #nav-wrapper > #contact-btn { bottom: 25px; right: 25px; }
+    #nav-wrapper > #contact-btn img {width: 45px;}
 } 
