--- a/src/css/common.css
+++ b/src/css/common.css
@@ -4,9 +4,17 @@
     box-sizing:border-box; 
     /* word-break: break-all; */
 }
-html {scroll-behavior: smooth;}
+html {
+    scroll-behavior: smooth; 
+    cursor: var(--cursor-crown);
+}
 body {overflow-x: hidden;}
 body *{z-index: 1; }
+
+:root {
+    --cursor-crown: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>👑</text></svg>") 16 0,auto;
+    --cursor-finger: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>👆</text></svg>") 16 0,auto;
+}
 
 :root {
     --brown-color: #725B4C;
@@ -79,6 +87,7 @@ body *{z-index: 1; }
 }
 
 a{ text-decoration: none; color: var(--brown-color); transition: all var(--transition-hover);}
+a:hover {cursor: var(--cursor-finger);}
 
 li { list-style-type: none; }
 ol,ul { list-style: none; }
