--- a/src/css/site.css
+++ b/src/css/site.css
@@ -16,7 +16,7 @@ Mouse
 
 #nav-wrapper > #contact-btn { position: fixed; bottom: 30px; right: 30px;}
 #nav-wrapper > #contact-btn img { width: 60px; animation: jitter 800ms infinite;}
-#nav-wrapper > #contact-btn :hover { cursor: pointer; }
+#nav-wrapper > #contact-btn :hover { cursor: var(--cursor-finger); }
 
 #nav-wrapper > #menu-btn { width: 25px; height: 20px; position: absolute; top: 30px; right: 30px; z-index: 100; }
 #nav-wrapper > #menu-btn > .line { position: absolute; left: 0; width: 100%; height: 16%; transform-origin: center; background-color: #725B4C; border-radius: 4px; transition: 0.5s all linear; }
@@ -24,7 +24,7 @@ Mouse
 #nav-wrapper > #menu-btn > .line2 { width: 80%; top: 50%; transform: translateY(-50%); }
 #nav-wrapper > #menu-btn > .line3 { top: 100%; transform: translateY(-100%); }
 
-#nav-wrapper > #menu-btn:hover { cursor: pointer; }
+#nav-wrapper > #menu-btn:hover { cursor: var(--cursor-finger); }
 #nav-wrapper > #menu-btn.check .line1 { top: 50%; transform: translate(0, -50%) rotate(45deg); }
 #nav-wrapper > #menu-btn.check .line2 { width: 0; opacity: 0; }
 #nav-wrapper > #menu-btn.check .line3 { top: 50%; transform: translate(0, -50%) rotate(-45deg); }
@@ -88,7 +88,7 @@ ul.nav__list.main {
     width: 100%;
     background: linear-gradient(90deg,transparent,#000);
     opacity: 0;
-    cursor: pointer;
+    cursor: var(--cursor-finger);
     pointer-events: none;
     transition: opacity 1s cubic-bezier(.25,1,.5,1);
 }
