--- a/src/css/construction.css
+++ b/src/css/construction.css
@@ -70,6 +70,10 @@ Home
         gap: 20px;
         margin-top: 2rem;
     }
+
+    #home > .kv-wrapper {
+        margin-top: 12vh;
+    }
 }
 
 /*//////////////////////////////////////////tunnel animation/////////////////////////////////////////*/
@@ -139,14 +143,39 @@ About Page
     background-position: center;
 }
 
-#about > .intro__section { background-image: url("../../public/images/eight-half-1.png"); }
-#about > .intro__section > .me-wrapper > img { width:64%; z-index: 11;}
+.ellipse {
+    position: absolute;
+    width: 70%;
+    margin-top: -10%;
+}
+
+@media screen and (max-width: 1300px) {
+    .ellipse {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .ellipse {
+        height: 100vh;
+        width: 150vw;
+    }
+}
+@media screen and (max-width: 512px) {
+    .ellipse {
+        width: 200vw;
+    }
+}
+
+
+/* #about > .intro__section { background-image: url("../../public/images/ellipse.svg"); } */
+#about > .intro__section > .me-wrapper > img { width:100%; z-index: 11;}
 #about > .intro__section > .me-wrapper > h2 { position: absolute; bottom: -10%;}
 #about > .intro__section > .me-wrapper > .body-text { position: absolute; text-align: center; bottom: -65%; }
 
-#about > .challenge__section { background-image: url("../../public/images/eight-half-2.png"); }
-#about > .challenge__section > .me-wrapper > img { width:75%; z-index: 11;}
-#about > .challenge__section > .me-wrapper > h2 { position: absolute; bottom: -10%; z-index: 9; }
+/* #about > .challenge__section { background-image: url("../../public/images/ellipse.svg"); } */
+#about > .challenge__section > .me-wrapper > img { width:80%; z-index: 11;}
+#about > .challenge__section > .me-wrapper > h2 { position: absolute; bottom: -10%; z-index: 11; }
 #about > .challenge__section > .me-wrapper > .body-text { position: absolute; text-align: center; bottom: -40%; }
 #about > .challenge__section > .me-wrapper > .btn-wrapper { position: absolute; bottom: -75%; display: flex; flex-direction: row; align-items: flex-start; gap: 55px;}
 
