--- a/src/css/construction.css
+++ b/src/css/construction.css
@@ -169,12 +169,13 @@ About Page
 
 
 /* #about > .intro__section { background-image: url("../../public/images/ellipse.svg"); } */
-#about > .intro__section > .me-wrapper > img { width:100%; z-index: 11;}
+#about > .intro__section > .me-wrapper > .me-tapioka-img { position: absolute; width:65%; z-index: 11; animation: float 6000ms infinite;}
+#about > .intro__section > .me-wrapper > .stars-img { position: absolute; width:110%; z-index: 10; animation: float 6000ms 1000ms infinite;}
 #about > .intro__section > .me-wrapper > h2 { position: absolute; bottom: -10%;}
 #about > .intro__section > .me-wrapper > .body-text { position: absolute; text-align: center; bottom: -65%; }
 
 /* #about > .challenge__section { background-image: url("../../public/images/ellipse.svg"); } */
-#about > .challenge__section > .me-wrapper > img { width:80%; z-index: 11;}
+#about > .challenge__section > .me-wrapper > img { width:80%; z-index: 11; animation: float 6000ms infinite;}
 #about > .challenge__section > .me-wrapper > h2 { position: absolute; bottom: -10%; z-index: 11; }
 #about > .challenge__section > .me-wrapper > .body-text { position: absolute; text-align: center; bottom: -40%; }
 #about > .challenge__section > .me-wrapper > .btn-wrapper { position: absolute; bottom: -75%; display: flex; flex-direction: row; align-items: flex-start; gap: 55px;}
