--- a/src/css/keyframes.css
+++ b/src/css/keyframes.css
@@ -17,3 +17,14 @@
 @-webkit-keyframes thumbHover { 0% {background-position:top;} 100% {background-position:bottom;} }
 @keyframes thumbOut {100% {background-position:top;} }
 @-webkit-keyframes thumbOut { 100% {background-position:top;} }
+
+@keyframes float {
+    0%, 100% {
+        -webkit-transform: translateY(6px);
+        transform: translateY(12px) scale(1);
+    }
+    50% {
+        -webkit-transform: translateY(-6px);
+        transform: translateY(-12px) scale(1.05);
+    }
+}
